--- a/src/App.css
+++ b/src/App.css
@@ -11,14 +11,14 @@
 }
 
 .footer{
-    background-color: #D1C4E9;
+    background-color: rgba(27, 138, 27, 0.884);
     margin:0px auto;
     padding: 20px 0px 20px 0px;
 }
 .jumbotron {
     padding:70px 30px 70px 30px;
     margin:0px auto;
-    background: #9575CD ;
+    background: rgba(160, 29, 29, 0.911) ;
     color:floralwhite;
 }
 
@@ -29,7 +29,7 @@ address{
 }
 
 .navbar-dark {
-    background-color: #512DA8;
+    background-color: rgba(27, 138, 27, 0.884);
 }
 
 .page-enter {
@@ -54,3 +54,9 @@ address{
     transition: all 300ms ease-out;
 }
 
+.link {
+    color:rgba(160, 29, 29, 0.911);
+}
+.link:hover {
+    color: red;
+ }
